force-app/main/default/objects/WorkOrder__c/fields/ActualDate__c.field-meta.xml
<CustomField>
    <fullName>ActualDate__c</fullName>
    <label>ACTUAL DATE</label>
    <type>Date</type>
</CustomField>