force-app/main/default/objects/WorkOrder__c/fields/AuditReconcileID__c.field-meta.xml
<CustomField>
    <fullName>AuditReconcileID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Reconcile ID</label>
    <referenceTo>Reconcile__c</referenceTo>
    <relationshipLabel>NEXT W/O</relationshipLabel>
    <relationshipName>AuditReconcile</relationshipName>
    <type>Lookup</type>
</CustomField>