force-app/main/default/objects/WorkOrder__c/fields/BadDebtLocal__c.field-meta.xml
<CustomField>
    <fullName>BadDebtLocal__c</fullName>
    <label>BAD DEBT(LOCAL)</label>
    <summarizedField>Billing__c.UnreceivedBalanceLocal__c</summarizedField>
    <summaryFilterItems>
        <field>Billing__c.BadDebtCheckBox__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing__c.Currency__c</field>
        <operation>notEqual</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing__c.BadDebtorType__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>