force-app/main/default/objects/WorkOrder__c/fields/BuyingCommercialValueLocal__c.field-meta.xml
<CustomField>
    <fullName>BuyingCommercialValueLocal__c</fullName>
    <label>BUYING COMMERCIAL VALUE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>