force-app/main/default/objects/WorkOrder__c/fields/CloFMSShipmentOrderID__c.field-meta.xml
<CustomField>
    <fullName>CloFMSShipmentOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloFMS-SHIPMENT ORDER ID</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>CloWMS-WORK ORDER</relationshipLabel>
    <relationshipName>WorkOrder</relationshipName>
    <type>Lookup</type>
</CustomField>