force-app/main/default/objects/WorkOrder__c/fields/ContainerNO__c.field-meta.xml
<CustomField>
    <fullName>ContainerNO__c</fullName>
    <label>CONTAINER NUMBER</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>