force-app/main/default/objects/WorkOrder__c/fields/ContainerNumber__c.field-meta.xml
<CustomField>
    <fullName>ContainerNumber__c</fullName>
    <label>Container No</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>