force-app/main/default/objects/WorkOrder__c/fields/ContainerQNTY1__c.field-meta.xml
<CustomField>
    <fullName>ContainerQNTY1__c</fullName>
    <label>CONTAINER QNTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>