force-app/main/default/objects/WorkOrder__c/fields/ContainerQNTY2__c.field-meta.xml
<CustomField>
    <fullName>ContainerQNTY2__c</fullName>
    <label>CONTAINER QNTY-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>