force-app/main/default/objects/WorkOrder__c/fields/ContainerType2__c.field-meta.xml
<CustomField>
    <fullName>ContainerType2__c</fullName>
    <label>CONTAINER TYPE-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContainerType</valueSetName>
    </valueSet>
</CustomField>