force-app/main/default/objects/WorkOrder__c/fields/DebitIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>DebitIssuedDate__c</fullName>
    <label>DEBIT ISSUED DATE</label>
    <type>Date</type>
</CustomField>