force-app/main/default/objects/WorkOrder__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>