force-app/main/default/objects/WorkOrder__c/fields/DestinationWarehouse__c.field-meta.xml
<CustomField>
    <fullName>DestinationWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DESTINATION WAREHOUSE ID</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>WORK ORDER (DESTINATION WAREHOUSE)</relationshipLabel>
    <relationshipName>WorkOrderDestinationWarehouseID</relationshipName>
    <type>Lookup</type>
</CustomField>