force-app/main/default/objects/WorkOrder__c/fields/DispatchServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>DispatchServiceRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISPATCH SERVICE REQUIRED</label>
    <type>Checkbox</type>
</CustomField>