force-app/main/default/objects/WorkOrder__c/fields/DisposalType__c.field-meta.xml
<CustomField>
    <fullName>DisposalType__c</fullName>
    <label>Disposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DisposalType</valueSetName>
    </valueSet>
</CustomField>