force-app/main/default/objects/WorkOrder__c/fields/DueDateReceivableCollection__c.field-meta.xml
<CustomField>
    <fullName>DueDateReceivableCollection__c</fullName>
    <label>DUE DATE OF RECEIVABLE COLLECTION</label>
    <type>Date</type>
</CustomField>