force-app/main/default/objects/WorkOrder__c/fields/DueDateWorkCompletion__c.field-meta.xml
<CustomField>
    <fullName>DueDateWorkCompletion__c</fullName>
    <label>Due Date of Work Completion</label>
    <type>Date</type>
</CustomField>