force-app/main/default/objects/WorkOrder__c/fields/FORWARDING_SERVICE_REQUIRED__c.field-meta.xml
<CustomField>
    <fullName>FORWARDING_SERVICE_REQUIRED__c</fullName>
    <label>FORWARDING SERVICE REQUIRED</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ForwardingServiceRequired</valueSetName>
    </valueSet>
</CustomField>