force-app/main/default/objects/WorkOrder__c/fields/GoodsDetail__c.field-meta.xml
<CustomField>
    <fullName>GoodsDetail__c</fullName>
    <label>GOODS DETAIL</label>
    <type>TextArea</type>
</CustomField>