force-app/main/default/objects/WorkOrder__c/fields/GoodsOwner__c.field-meta.xml
<CustomField>
    <fullName>GoodsOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS OWNER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WORK ORDER (GOODS OWNER)</relationshipLabel>
    <relationshipName>WorkOrderGoodsOwner</relationshipName>
    <type>Lookup</type>
</CustomField>