force-app/main/default/objects/WorkOrder__c/fields/GoodsSOPOApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>GoodsSOPOApprovalStatus__c</fullName>
    <formula>IF(NOT(ISBLANK(PurchasingOrderID__c)) ,  text(PurchasingOrderID__r.ApprovalStatus__c) ,

IF(NOT(ISBLANK(SalesOrderID__c)) ,  text(SalesOrderID__r.ApprovalStatus__c),null
)
)</formula>
    <label>Goods S/O or P/O Approval Status</label>
    <type>Text</type>
</CustomField>