force-app/main/default/objects/WorkOrder__c/fields/HSCode__c.field-meta.xml
<CustomField>
    <fullName>HSCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS CODE</label>
    <referenceTo>HS_Code__c</referenceTo>
    <relationshipLabel>WORK ORDER</relationshipLabel>
    <relationshipName>WorkOrderHSCode</relationshipName>
    <type>Lookup</type>
</CustomField>