force-app/main/default/objects/WorkOrder__c/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <label>ITEM NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>