force-app/main/default/objects/WorkOrder__c/fields/JobReqeustIDFromCustomer__c.field-meta.xml
<CustomField>
    <fullName>JobReqeustIDFromCustomer__c</fullName>
    <label>JOB REQUEST ID FROM CUSTOMER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>