force-app/main/default/objects/WorkOrder__c/fields/LOTNumber__c.field-meta.xml
<CustomField>
    <fullName>LOTNumber__c</fullName>
    <label>LOT NUMBER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>