force-app/main/default/objects/WorkOrder__c/fields/MaxNoBilling__c.field-meta.xml
<CustomField>
    <fullName>MaxNoBilling__c</fullName>
    <label>MaxNoBilling</label>
    <summarizedField>Billing__c.BillingDisplayNo__c</summarizedField>
    <summaryForeignKey>Billing__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>