force-app/main/default/objects/WorkOrder__c/fields/PickingServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>PickingServiceRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PICKING SERVICE REQUIRED</label>
    <type>Checkbox</type>
</CustomField>