force-app/main/default/objects/WorkOrder__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRODUCT ID</label>
    <referenceTo>PRODUCT__c</referenceTo>
    <relationshipLabel>WORK ORDER</relationshipLabel>
    <relationshipName>WorkOrder</relationshipName>
    <type>Lookup</type>
</CustomField>