force-app/main/default/objects/WorkOrder__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>PRODUCT NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>