force-app/main/default/objects/WorkOrder__c/fields/PurchasingOrderID__c.field-meta.xml
<CustomField>
    <fullName>PurchasingOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS PURCHASING ORDER ID</label>
    <referenceTo>GoodsPurchasingOrder__c</referenceTo>
    <relationshipLabel>WORK ORDER</relationshipLabel>
    <relationshipName>WorkOrder</relationshipName>
    <type>Lookup</type>
</CustomField>