force-app/main/default/objects/WorkOrder__c/fields/PutawayServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>PutawayServiceRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PUTAWAY SERVICE REQUIRED</label>
    <type>Checkbox</type>
</CustomField>