force-app/main/default/objects/WorkOrder__c/fields/RequestSubmissionDateto_Vendor__c.field-meta.xml
<CustomField>
    <fullName>RequestSubmissionDateto_Vendor__c</fullName>
    <label>Request Submission Date to Vendor</label>
    <type>Date</type>
</CustomField>