force-app/main/default/objects/WorkOrder__c/fields/ReturnType__c.field-meta.xml
<CustomField>
    <fullName>ReturnType__c</fullName>
    <label>Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReturnType</valueSetName>
    </valueSet>
</CustomField>