force-app/main/default/objects/WorkOrder__c/fields/ReturnWarehouseID__c.field-meta.xml
<CustomField>
    <fullName>ReturnWarehouseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Warehouse ID</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>CloWMS W/O(RETURN WAREHOUSE)</relationshipLabel>
    <relationshipName>ReturnWarehouseID</relationshipName>
    <type>Lookup</type>
</CustomField>