force-app/main/default/objects/WorkOrder__c/fields/RollupCommercialValueUSDFromWOProduct__c.field-meta.xml
<CustomField>
    <fullName>RollupCommercialValueUSDFromWOProduct__c</fullName>
    <label>ROLLUP COMMERCIAL VALUE(USD)</label>
    <summarizedField>ConnectWOProduct__c.CommercialValuePerUnitUSD__c</summarizedField>
    <summaryForeignKey>ConnectWOProduct__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>