force-app/main/default/objects/WorkOrder__c/fields/RollupFinalNetWeight__c.field-meta.xml
<CustomField>
    <fullName>RollupFinalNetWeight__c</fullName>
    <label>ROLLUP FINAL NET WEIGHT FROM W/O &amp; PRO</label>
    <summarizedField>ConnectWOProduct__c.FinalNetWeight__c</summarizedField>
    <summaryForeignKey>ConnectWOProduct__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>