force-app/main/default/objects/WorkOrder__c/fields/RollupFinalQuantityWOProduct__c.field-meta.xml
<CustomField>
    <fullName>RollupFinalQuantityWOProduct__c</fullName>
    <label>ROLLUP FINAL QUANTITY FROM W/O &amp; PRODUCT</label>
    <summarizedField>ConnectWOProduct__c.FinalQuantity__c</summarizedField>
    <summaryForeignKey>ConnectWOProduct__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>