force-app/main/default/objects/WorkOrder__c/fields/RollUpGrossWeightWOProduct__c.field-meta.xml
<CustomField>
    <fullName>RollUpGrossWeightWOProduct__c</fullName>
    <label>ROLLUP GROSS WEIGHT FROM W/O &amp; PRODUCT</label>
    <summarizedField>ConnectWOProduct__c.GrossWeightKG__c</summarizedField>
    <summaryForeignKey>ConnectWOProduct__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>