force-app/main/default/objects/WorkOrder__c/fields/RollUpMeasurementWOProduct__c.field-meta.xml
<CustomField>
    <fullName>RollUpMeasurementWOProduct__c</fullName>
    <label>ROLLUP MEASUREMENT FROM W/O &amp; PRODUCT</label>
    <summarizedField>ConnectWOProduct__c.Measurement__c</summarizedField>
    <summaryForeignKey>ConnectWOProduct__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>