force-app/main/default/objects/WorkOrder__c/fields/RollUpNetWeightWOProduct__c.field-meta.xml
<CustomField>
    <fullName>RollUpNetWeightWOProduct__c</fullName>
    <label>ROLLUP NET WEIGHT FROM W/O &amp; PRODUCT</label>
    <summarizedField>ConnectWOProduct__c.NETWeightKG__c</summarizedField>
    <summaryForeignKey>ConnectWOProduct__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>