force-app/main/default/objects/WorkOrder__c/fields/RollupQuantityWOProduct__c.field-meta.xml
<CustomField>
    <fullName>RollupQuantityWOProduct__c</fullName>
    <label>ROLLUP PLAN QUANTITY FROM W/O &amp; PRODUCT</label>
    <summarizedField>ConnectWOProduct__c.Quantity__c</summarizedField>
    <summaryForeignKey>ConnectWOProduct__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>