force-app/main/default/objects/WorkOrder__c/fields/RollUpUnpaidBalanceOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollUpUnpaidBalanceOfBuyingUSD__c</fullName>
    <label>ROLLUP UNPAID BAL OF BUYING(USD)</label>
    <summarizedField>Billing__c.UnpaidBalanceOfBuyingUSD__c</summarizedField>
    <summaryFilterItems>
        <field>Billing__c.Currency__c</field>
        <operation>equals</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>