force-app/main/default/objects/WorkOrder__c/fields/RollupUnreceivedBalanceOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupUnreceivedBalanceOfSellingLocal__c</fullName>
    <label>ROLLUP UNRECEIVED BAL OF SELLING(LOCAL)</label>
    <summarizedField>Billing__c.UnreceivedBalanceLocal__c</summarizedField>
    <summaryFilterItems>
        <field>Billing__c.Currency__c</field>
        <operation>notEqual</operation>
        <value>USD</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing__c.WorkOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>