force-app/main/default/objects/WorkOrder__c/fields/SalesAccountedDate__c.field-meta.xml
<CustomField>
    <fullName>SalesAccountedDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>SALES ACCOUNTED DATE</label>
    <type>Date</type>
</CustomField>