force-app/main/default/objects/WorkOrder__c/fields/ScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduleDate__c</fullName>
    <label>SCHEDULE DATE</label>
    <type>Date</type>
</CustomField>