force-app/main/default/objects/WorkOrder__c/fields/SKUNumber__c.field-meta.xml
<CustomField>
    <fullName>SKUNumber__c</fullName>
    <label>SKU NUMBER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>