force-app/main/default/objects/WorkOrder__c/fields/StorageServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>StorageServiceRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STORAGE SERVICE REQUIRED</label>
    <type>Checkbox</type>
</CustomField>