force-app/main/default/objects/WorkOrder__c/fields/TransferServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>TransferServiceRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRANSFER SERVICE REQUIRED</label>
    <type>Checkbox</type>
</CustomField>