force-app/main/default/objects/WorkOrder__c/fields/TransportID__c.field-meta.xml
<CustomField>
    <fullName>TransportID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport ID</label>
    <referenceTo>Cargo_Delivery__c</referenceTo>
    <relationshipLabel>W/O</relationshipLabel>
    <relationshipName>W_O</relationshipName>
    <type>Lookup</type>
</CustomField>