force-app/main/default/objects/WorkOrder__c/fields/TruckFleetID__c.field-meta.xml
<CustomField>
    <fullName>TruckFleetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Truck/Fleet ID</label>
    <referenceTo>TruckFleet__c</referenceTo>
    <relationshipLabel>W/O</relationshipLabel>
    <relationshipName>W_O</relationshipName>
    <type>Lookup</type>
</CustomField>