force-app/main/default/objects/WorkOrder__c/fields/ValueAddedServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>ValueAddedServiceRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VALUE ADDED SERVICE REQUIRED</label>
    <type>Checkbox</type>
</CustomField>