force-app/main/default/objects/WorkOrder__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>VERSION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>