force-app/main/default/objects/WorkOrder__c/fields/WarehouseBasicServiceType__c.field-meta.xml
<CustomField>
    <fullName>WarehouseBasicServiceType__c</fullName>
    <label>WAREHOUSE BASIC SERVICE TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WarehouseBasicServiceType</valueSetName>
    </valueSet>
</CustomField>