force-app/main/default/objects/WorkOrder__c/fields/WarehouseID__c.field-meta.xml
<CustomField>
    <fullName>WarehouseID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WAREHOUSE ID</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>WORK ORDER (ORIGIN WAREHOUSE)</relationshipLabel>
    <relationshipName>WORK_ORDER</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>