force-app/main/default/objects/WorkOrder__c/fields/WeightUnit__c.field-meta.xml
<CustomField>
    <fullName>WeightUnit__c</fullName>
    <label>WEIGHT UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WeightUnit</valueSetName>
    </valueSet>
</CustomField>