force-app/main/default/objects/WorkOrder__c/fields/WOQRLabel__c.field-meta.xml
<CustomField>
    <fullName>WOQRLabel__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=100x100&amp;cht=qr&amp;chl=&apos; + Name , &apos;Create Qr Code for this item&apos; )</formula>
    <label>W/O QR LABEL</label>
    <type>Text</type>
</CustomField>