force-app/main/default/objects/WorkOrder__c/fields/WorkOrderServiceStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderServiceStatus__c</fullName>
    <label>WORK ORDER SERVICE STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WorkOrderServiceStatus</valueSetName>
    </valueSet>
</CustomField>