force-app/main/default/objects/WorkOrder__c/fields/WorkOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderStatus__c</fullName>
    <label>WORK ORDER STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WorkStatus</valueSetName>
    </valueSet>
</CustomField>