force-app/main/default/objects/WorkOrder__c/recordTypes/CombinedTransfer.recordType-meta.xml
<RecordType>
    <fullName>CombinedTransfer</fullName>
    <active>true</active>
    <description>Massive cargo transfer after combining many cargo to the same destination</description>
    <label>Combined Transfer</label>
</RecordType>