force-app/main/default/objects/WorkOrder__c/recordTypes/CrossDock.recordType-meta.xml
<RecordType>
    <fullName>CrossDock</fullName>
    <active>true</active>
    <description>After Cargo inbound, directly cargo outbound without storage</description>
    <label>Cross-Docking</label>
</RecordType>