force-app/main/default/objects/WorkOrder__c/recordTypes/Disposal.recordType-meta.xml
<RecordType>
    <fullName>Disposal</fullName>
    <active>true</active>
    <description>Dispose cargo due to damaged or expired</description>
    <label>Disposal</label>
</RecordType>