force-app/main/default/objects/WorkOrder__c/recordTypes/ExpressCargoTransfer.recordType-meta.xml
<RecordType>
    <fullName>ExpressCargoTransfer</fullName>
    <active>true</active>
    <description>Express cargo for 1 client to manage inbound and outsound</description>
    <label>Express</label>
</RecordType>