force-app/main/default/objects/WorkOrder__c/recordTypes/Inbound.recordType-meta.xml
<RecordType>
    <fullName>Inbound</fullName>
    <active>true</active>
    <description>Cargo Inbound coming into warehouse and store in warehouse</description>
    <label>Inbound</label>
</RecordType>