force-app/main/default/objects/WorkOrder__c/recordTypes/Outbound.recordType-meta.xml
<RecordType>
    <fullName>Outbound</fullName>
    <active>true</active>
    <description>Cargo outbound from Warehouse</description>
    <label>Outbound</label>
</RecordType>