force-app/main/default/objects/WorkOrder__c/recordTypes/PeriodicBilling.recordType-meta.xml
<RecordType>
    <fullName>PeriodicBilling</fullName>
    <active>true</active>
    <description>To consolidate Selling or Buying based on defined period such as rental fee, etc.</description>
    <label>Periodic Billing</label>
</RecordType>