force-app/main/default/objects/WorkOrder__c/recordTypes/Relocation.recordType-meta.xml
<RecordType>
    <fullName>Relocation</fullName>
    <active>true</active>
    <description>Move from one location to another location inside of the same warehouse</description>
    <label>Relocation</label>
</RecordType>