force-app/main/default/objects/WorkOrder__c/recordTypes/ReturnFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>ReturnFromCustomer</fullName>
    <active>true</active>
    <description>Return from customer due to damage/cancel/expired</description>
    <label>Return from customer</label>
</RecordType>