force-app/main/default/objects/WorkOrder__c/recordTypes/ReturnToVendor.recordType-meta.xml
<RecordType>
    <fullName>ReturnToVendor</fullName>
    <active>true</active>
    <description>Return to vendor due to damage/cancel/expired</description>
    <label>Return to vendor</label>
</RecordType>