force-app/main/default/objects/WorkOrder__c/recordTypes/Transfer.recordType-meta.xml
<RecordType>
    <fullName>Transfer</fullName>
    <active>true</active>
    <description>Transfer Cargo for 1 client to another warehouse</description>
    <label>Single Transfer</label>
</RecordType>