force-app/main/default/objects/WorkOrder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>WorkOrderStatus__c</columns>
    <columns>WorkOrderServiceStatus__c</columns>
    <columns>Customer__c</columns>
    <columns>WarehouseID__c</columns>
    <columns>DestinationWarehouseName__c</columns>
    <columns>ScheduleDate__c</columns>
    <columns>ActualDate__c</columns>
    <columns>CargoMode__c</columns>
    <columns>NETWeight__c</columns>
    <columns>GrossWeight__c</columns>
    <columns>Measurement__c</columns>
    <columns>WarehouseBasicServiceType__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>0.All</label>
</ListView>